--- a/client/pom.xml
+++ b/client/pom.xml
@@ -38,6 +38,12 @@
             <artifactId>common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <!--spring 相关配置-->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>${springmvc.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
