--- a/freelancer/pom.xml
+++ b/freelancer/pom.xml
@@ -14,7 +14,17 @@
     <artifactId>freelancer</artifactId>
 
     <dependencies>
-
+        <dependency>
+            <groupId>com.worthto</groupId>
+            <artifactId>common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <!--spring 相关配置-->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>${springmvc.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
