--- a/freelancer/src/main/webapp/WEB-INF/web.xml
+++ b/freelancer/src/main/webapp/WEB-INF/web.xml
@@ -10,7 +10,7 @@
 
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>/WEB-INF/applicationContext.xml</param-value>
+        <param-value>classpath:applicationContext.xml</param-value>
     </context-param>
 
     <servlet>
@@ -25,6 +25,6 @@
 
     <servlet-mapping>
         <servlet-name>dispatcherServlet</servlet-name>
-        <url-pattern>/*</url-pattern>
+        <url-pattern>/app</url-pattern>
     </servlet-mapping>
 </web-app>
