--- a/platform/pom.xml
+++ b/platform/pom.xml
@@ -44,6 +44,16 @@
             <artifactId>spring-webmvc</artifactId>
             <version>${springmvc.version}</version>
         </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>${javax.servlet.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet.jsp</groupId>
+            <artifactId>jsp-api</artifactId>
+            <version>${javax.servlet.jsp.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
