--- a/platform/src/main/webapp/WEB-INF/web.xml
+++ b/platform/src/main/webapp/WEB-INF/web.xml
@@ -13,36 +13,36 @@
         <param-value>classpath:applicationContext.xml</param-value>
     </context-param>
 
-    <!--hessian servlet配置-->
-    <servlet>
-        <servlet-name>hessian-service</servlet-name>
+    <!--&lt;!&ndash;hessian servlet配置&ndash;&gt;-->
+    <!--<servlet>-->
+        <!--<servlet-name>hessian-service</servlet-name>-->
 
-        <servlet-class>
-            com.caucho.hessian.server.HessianServlet
-        </servlet-class>
+        <!--<servlet-class>-->
+            <!--com.caucho.hessian.server.HessianServlet-->
+        <!--</servlet-class>-->
 
-        <init-param>
-            <param-name>home-class</param-name>
-            <param-value>
-                <!-- 服务实现类 -->
-                org.byron4j.hessian.service.impl.HelloServiceImpl
-            </param-value>
-        </init-param>
+        <!--<init-param>-->
+            <!--<param-name>home-class</param-name>-->
+            <!--<param-value>-->
+                <!--&lt;!&ndash; 服务实现类 &ndash;&gt;-->
+                <!--com.worthto.common.service.HelloServiceImpl-->
+            <!--</param-value>-->
+        <!--</init-param>-->
 
-        <init-param>
-            <param-name>home-api</param-name>
-            <!-- 服务接口 -->
-            <param-value>
-                org.byron4j.hessian.service.HelloService
-            </param-value>
-        </init-param>
-        <load-on-startup>1</load-on-startup>
-    </servlet>
+        <!--<init-param>-->
+            <!--<param-name>home-api</param-name>-->
+            <!--&lt;!&ndash; 服务接口 &ndash;&gt;-->
+            <!--<param-value>-->
+                <!--com.worthto.common.service.HelloService-->
+            <!--</param-value>-->
+        <!--</init-param>-->
+        <!--<load-on-startup>1</load-on-startup>-->
+    <!--</servlet>-->
 
-    <servlet-mapping>
-        <servlet-name>hessian-service</servlet-name>
-        <url-pattern>/hessian</url-pattern>
-    </servlet-mapping>
+    <!--<servlet-mapping>-->
+        <!--<servlet-name>hessian-service</servlet-name>-->
+        <!--<url-pattern>/hessian</url-pattern>-->
+    <!--</servlet-mapping>-->
 
     <!--springmvc servlet配置-->
     <servlet>
@@ -57,7 +57,7 @@
 
     <servlet-mapping>
         <servlet-name>dispatcherServlet</servlet-name>
-        <url-pattern>/app</url-pattern>
+        <url-pattern>/app/*</url-pattern>
     </servlet-mapping>
 </web-app>
         
