--- a/platform/src/main/webapp/WEB-INF/web.xml
+++ b/platform/src/main/webapp/WEB-INF/web.xml
@@ -50,7 +50,7 @@
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <init-param>
             <param-name>contextConfigLocation</param-name>
-            <param-value></param-value>
+            <param-value>classpath:dispatcher-servlet</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
