--- a/platform/src/main/webapp/WEB-INF/web.xml
+++ b/platform/src/main/webapp/WEB-INF/web.xml
@@ -10,7 +10,7 @@
 
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>classpath:applicationContext.xml</param-value>
+        <param-value>classpath:applicationContext-platform.xml</param-value>
     </context-param>
 
     <!--&lt;!&ndash;hessian servlet配置&ndash;&gt;-->
